# zen-mcp-server

./: .env.example  BUGFIX_SUMMARY.md  CHANGELOG.md  CHANGES.diff  CLAUDE.md  CLAUDE.md.TEMPLATE  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_SETUP.md  CLAUDE_CODE_TEMPLATE.md  CLI_FEATURE_SUMMARY.md  CLI_USAGE_GUIDE.md  CMAF_CLI_REPORT.md  CONTRIBUTION_PLAN.md  DOCKER_DESKTOP_DEPLOYMENT.md  DOCUMENTATION_UPDATES.md  FILE_CLEANUP_PLAN.md  IMPLEMENTATION_PLAN.md  INSTALL.md  INSTALLATION_FIX.md  MANIFEST.in  PROGRESS_REPORT.md  QUICK_START_TWO_STAGE.md  README.md  README_COMPREHENSIVE.md  REDIS_CONFIGURATION.md  RELEASE_NOTES_v5.12.0.md  TOKEN_OPTIMIZATION_IMPLEMENTATION_PLAN.md  TOKEN_OPTIMIZATION_SUMMARY.md  TOKEN_OPTIMIZATION_TROUBLESHOOTING.md  TOOL_TESTING_RESULTS.md  TYPER_MIGRATION_COMPLETE.md  XAI_GROK_MODELS_README.md  ZEN_CLI_CMAF_PLAN.md  ZEN_CLI_VS_MCP_DECISION_GUIDE.md  activate_zen.sh  config.py  diagnose_token_optimization.py  docker-compose.yaml  docker-compose.yml  find_bad_imports.py  (+31 more)
conf/: anthropic_models.json  custom_models.json  gemini_models.json  openai_models.json  openrouter_models.json  xai_models.json
docs/: README.md  STORAGE_GUIDE.md  getting-started.md  setup-wizard.md  storage-backends.md
providers/: anthropic.py  gemini.py  openai.py  openai_provider.py  registry.py  xai.py
scripts/: install-skill.sh  test-skill.sh  update-skill.sh
simulator_tests/: test_xai_models.py
templates/: CLAUDE_MD_GLOBAL_TEMPLATE.md  CLAUDE_MD_QUICKSTART.md  CLAUDE_MD_USER_TEMPLATE.md  README.md
tests/: __init__.py  run_tests.py  test_cli_tools.py  (+7 more)
(+112 files in other folders)
