[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zen-cli"
version = "5.13.0"
description = "AI-powered development assistant CLI with 95% token optimization"
readme = "README.md"
authors = [
    {name = "Zen CLI Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "redis>=5.0.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
zen = "zen_cli.main_typer:cli"

[project.urls]
Homepage = "https://github.com/WKassebaum/zen-mcp-server"
Repository = "https://github.com/WKassebaum/zen-mcp-server"
Issues = "https://github.com/WKassebaum/zen-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zen_cli*"]

[tool.setuptools.package-data]
zen_cli = ["systemprompts/*.py", "py.typed"]